# Autism-Detection

./: .gitignore  Major_project.ipynb  SFARI-Gene_genes_07-08-2025release_09-17-2025export (2).csv  U-Net.ipynb  main.ipynb  pyproject.toml  sub-001_region_volumes.csv
autism-frontend/: package-lock.json  package.json
autism-frontend/app/: globals.css  layout.tsx  page.tsx
autism-frontend/app/about-autism/: page.tsx
autism-frontend/app/about-project/: page.tsx
autism-frontend/app/admin/: page.tsx
autism-frontend/app/auth/: page.tsx
autism-frontend/app/chat/: page.tsx
autism-frontend/app/contact/: page.tsx
autism-frontend/app/detect/: page.tsx
autism-frontend/app/faq/: page.tsx
autism-frontend/app/patient/: layout.tsx  page.tsx
autism-frontend/app/patient/chat/[doctorId]/: page.tsx
autism-frontend/app/patient/consult/: page.tsx
autism-frontend/app/patient/detect/: page.tsx
autism-frontend/app/patient/profile/: page.tsx
autism-frontend/app/patient/results/: page.tsx
autism-frontend/app/results/: page.tsx
autism-frontend/app/screening/: page.tsx
autism-frontend/app/services/: page.tsx
autism-frontend/components/: footer.tsx  navbar.tsx
autism-frontend/lib/: auth-context.tsx  chat-context.tsx
final/: asdmodel.pkl  notebook.ipynb  test_model.py
final/api/: api.py
